# testdome_tasks_cpp

./: .gitignore  CMakeLists.txt  README.md
binary_search_tree/: CMakeLists.txt  README.md  main.cpp
merge_names/: CMakeLists.txt  README.md  main.cpp
multiple_choice_test/: CMakeLists.txt  README.md  main.cpp
pipeline/: CMakeLists.txt  README.md  main.cpp
quadratic_equation/: CMakeLists.txt  README.md  main.cpp
route_planner/: CMakeLists.txt  README.md  main.cpp
song/: CMakeLists.txt  README.md  main.cpp
sorted_search/: CMakeLists.txt  README.md  main.cpp
train_composition/: CMakeLists.txt  README.md  main.cpp
two_sum/: CMakeLists.txt  README.md  main.cpp
user_input/: CMakeLists.txt  README.md  main.cpp
